# hwt

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  GEMINI.md  IMAGE_INJECT_GUIDE.md  README.md  build.sh
.cargo/: config.toml
.claude/: settings.json
DeviceCleanup_extracted/: DeviceCleanup.txt  exports.txt  function_index.txt  imports.txt  strings.txt
DeviceCleanup_extracted/__MACOSX/: ._DeviceCleanup.txt
DeviceCleanup_extracted/__MACOSX/decompile/: ._14000945B.c
DeviceCleanup_extracted/decompile/: 140001000.c  140001020.c  140001058.c  1400010FC.c  140001110.c  140001128.c  140001130.c  140001220.c  140001248.c  14000124C.c  14000125C.c  140001278.c  1400012F4.c  1400012FC.c  14000179C.c  1400017A8.c  140001840.c  140001854.c  140001878.c  140001898.c  1400018D4.c  1400018E8.c  140001D84.c  140001DC0.c  140001E04.c  140001E64.c  140002008.c  1400023E4.c  14000242C.c  14000246C.c  1400024D4.c  140002508.c  140002534.c  1400026CC.c  140002804.c  140002924.c  140002A74.c  140002AE4.c  140002B18.c  140002B64.c  (+238 more)
DeviceCleanup_extracted/memory/: 140000000--140001000.txt  140001000--14000A000.txt  14000A000--14000A1F8.txt  14000A1F8--14000F000.txt  14000F000--14000F6F0.txt  14000F6F0--14000FB70.txt  14000FB70--140018000.txt  140018000--140019000.txt
client/: Cargo.toml  build.rs
client/src/: cleanup.rs  escalation.rs  hwid.rs  main.rs  protocol.rs  registry.rs  scanner.rs  service.rs  web.rs
client/src/assets/: client.html  style.css
cloud/: .dockerignore
cloud/backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  hwt-cloud.service  hwt.db  requirements.txt  start.sh
cloud/backend/app/: auth.py  config.py  crypto.py  database.py  log_decrypt.py  main.py  models.py  schemas.py
cloud/backend/app/api/: admin.py  auth.py  verify.py
cloud/backend/keys/: rsa_private.pem  rsa_public.pem
cloud/backend/static/: admin.html
cloud/backend/tests/: conftest.py  test_admin.py  test_auth.py  test_e2e.py  test_integration.py  test_log_decrypt.py  test_verify.py
cloud/backend/tools/: decrypt_log.py
cloud/frontend/: index.html  package-lock.json  package.json  vite.config.ts
cloud/frontend/src/: App.vue  env.d.ts  i18n.ts  main.ts
cloud/frontend/src/api/: admin.ts  auth.ts  crypto.ts  request.ts
cloud/frontend/src/layouts/: AdminLayout.vue
cloud/frontend/src/locales/: en.json  zh.json
cloud/frontend/src/router/: index.ts
cloud/frontend/src/styles/: auth.css  theme.css
cloud/frontend/src/utils/: format.ts
cloud/frontend/src/views/: Bindings.vue  ClientLogs.vue  Dashboard.vue  Login.vue  Logs.vue  Register.vue  Users.vue
demo/: Cargo.toml  build.rs  版本1.bat
demo/src/: cleanup.rs  main.rs  registry.rs
docs/superpowers/plans/: 2026-04-24-web-log-decrypt.md
docs/superpowers/specs/: 2026-04-24-web-log-decrypt-design.md
protocol/: Cargo.toml
protocol/src/: crypto.rs  encrypted_log.rs  frame.rs  lib.rs
server/: Cargo.toml  build.rs
server/src/: auth.rs  gui.rs  listener.rs  machine.rs  main.rs  web.rs
server/src/assets/: common.js  dashboard.html  login.html  register.html  style.css
