[package]
name = "at-client"
version = "0.1.0"
edition = "2021"

[dependencies]
at-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rsa = { version = "0.9", features = ["sha2"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
obfstr = "0.4"
gethostname = "0.5"
if-addrs = "0.13"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
winreg = "0.55"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Console",
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"
