[package]
name = "hwt-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rsa = { version = "0.9", features = ["sha2"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
tokio = { version = "1", features = ["io-util", "net"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
