[package]
name = "hwt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hwt-protocol = { path = "../protocol" }
eframe = "0.28"
egui = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rsa = { version = "0.9", features = ["sha2"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
obfstr = "0.4"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
wmi = "0.13"

[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"
